--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     },
     "engines": {
         "node": ">=22"
+    },
+    "pnpm": {
+        "overrides": {
+            "onxruntime-node": "1.20.1"
+        }
     }
 }
