deepseek and herist image

--- a/core/package.json
+++ b/core/package.json
@@ -122,6 +122,7 @@
         "gif-frames": "^0.4.1",
         "glob": "11.0.0",
         "graceful-fs": "4.2.11",
+        "heurist": "^0.0.43",
         "html-escaper": "3.0.3",
         "html-to-text": "9.0.5",
         "import-meta-resolve": "4.1.0",
@@ -138,6 +139,7 @@
         "node-wav": "0.0.2",
         "nodejs-whisper": "0.1.18",
         "nodemon": "3.1.7",
+        "ollama": "^0.5.12",
         "openai": "4.69.0",
         "pdfjs-dist": "4.7.76",
         "pg": "^8.13.1",
