--- a/core/agentConfig.yaml
+++ b/core/agentConfig.yaml
@@ -5,7 +5,7 @@
 # Paths are relative to the core/src directory
 
 actions:
-    - name: askClaude
-      path: ./actions/askClaude.ts
+    # - name: askClaude
+    #   path: ./actions/askClaude.ts
     # - name: epicAction
     #   path: ./custom_actions/epicAction.ts
