--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ timeline_cache.json
 characters/
 
 cache/
+
+# search_context*
+# interactions_context*
+# search_response*
+# interactions_response*  
